feat(javascript): add logic into our calculator

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<div class="calculator">
 		<div class="screen">
 			<p class="equation" id="equation">0</p>
-			<p class="result" id="result"></p>
+			<p class="result" id="result">0</p>
 		</div>
 		<div class="buttons">
 			<div class="row">
-				<button class="btn operator">C</button>
+				<button class="btn clear">C</button>
 				<button class="btn delete">DEL</button>
 				<button class="btn operator">+</button>
 				<button class="btn operator">-</button>
@@ -40,9 +40,9 @@
 				<button class="btn operator">^</button>
 			</div>
 			<div class="row">
-				<button class="btn">0</button>
+				<button class="btn number">0</button>
 				<button class="btn separator">.</button>
-				<button class="btn operator equals">=</button>
+				<button class="btn equal">=</button>
 			</div>
 		</div>
 	</div>
